Tue Dec 16 01:57:24 2003  Jonathan Blandford  <jrb@gnome.org>

	* Makefile.am: comment out the UTF-8 changes.  We don't build all
	that often as we keep the generated file in CVS, and most people
	won't build it.

	* autogen.sh: add an autogen.sh file, and clean up the build
	setup.

Tue Nov 18 10:12:38 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (GETTEXT_PACKAGE): add sv.po

Mon Nov 17 10:44:28 2003  Jonathan Blandford  <jrb@redhat.com>

	* po/nl.po: updated translation.

Thu Nov 13 17:47:52 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in (GETTEXT_PACKAGE): add nl.po

	* po/nl.po: new translation.

Wed Nov 12 14:00:13 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: add hu.po and sv.po.  We're now building in
	translations.

Fri Nov  7 16:42:24 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: moved to intltool.  We now build translations from
	pot files.