@@ -1,3 +1,8 @@
+Mon Jan 12 15:49:55 2004  Thomas Leonard <tal00r@ecs.soton.ac.uk>
+
+	* freedesktop.org.xml.in: Updated DjVu entry (patch from
+	  Stéphane Loeuillet).
+
 Tue Dec 16 01:57:24 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* Makefile.am: comment out the UTF-8 changes.  We don't build all
